--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,28 +10,16 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <a href="../" class="navbar-brand">Code Generation</a>
-          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div class="navbar-collapse collapse" id="navbar-main">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="/users/new">Register</a></li>
-            <li><a href="/sessions/new">Log In</a></li>
-            <li><a href="/sessions" data-method="delete">Log Out</a></li>
-            <li><button onclick="constructPage()" class="btn btn-default navbar-btn">Generate</button></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-    <div class="container">
+    <h1><%= @editor %></h1>
+   <% if !@current_user %>
+     <%= render 'shared/nav_logged_out' %>
+   <% elsif @current_user and @editor == 'test'%>
+     <%= render 'shared/nav_editor' %>
+     <h1>hi</h1>
+   <% else %>
+     <%= render 'shared/nav_logged_in' %>
+   <% end %>
+   <div class="container">
       <%= yield %>
     </div>
   </body>
