--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-3">
-    <h1><%= @user.username %></h1>
+    <h1><%= @current_user.username %></h1>
     <a class="btn btn-info" href="/projects/new">New Project</a>
   </div>
   <div class="col-md-9">
