--- a/app/views/shared/_nav_editor.html.erb
+++ b/app/views/shared/_nav_editor.html.erb
@@ -12,7 +12,7 @@
       <ul class='nav navbar-nav navbar-right'>
         <li><a href="">Challenge 1</a></li>
         <li><a href="">Challenge 2</a></li>
-        <li><a href="">Log Out</a></li>
+        <li><a href="/sessions" data-method='delete'>Log Out</a></li>
         <li><button onclick='constructPage()' class='btn btn-default navbar-btn'>Generate</button></li>
       </ul>
     </div>
