--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -25,7 +25,7 @@
           </div>
           <div class="form-group">
             <div class="col-lg-9 col-lg-offset-3">
-              <button type="submit" class="btn btn-default">Already a User?</button>
+              <a href='/sessions/new'><button type="submit" class="btn btn-default">Already a User?</button></a>
               <input class="btn btn-primary" type="submit" value="Join">
             </div>
           </div>
