--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,13 @@
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Code Generation: Landing</title>
-  </head>
-  <body>
-    <h1>Code Gen Landing!!!</h1>
-  </body>
-</html>
+<style scoped>
+</style>
+<style id="css" type="text/css" scoped> 
+</style>
+<div class='row'>
+  <div class='col-md-12'>
+    <div class="jumbotron">
+      <h1>Code Generation</h1>
+      <p>Teaching you(th) to code</p>
+      <p><a class="btn btn-primary btn-lg" href="/users/new" role="button">Start Coding</a></p>
+    </div>
+  </div> 
+</div>
