--- a/app/views/shared/_nav_logged_out.html.erb
+++ b/app/views/shared/_nav_logged_out.html.erb
@@ -1,7 +1,7 @@
 <div class='navbar navbar-inverse navbar-fixed-top'>
   <div class='container'>
     <div class='navbar-header'>
-      <a href="" class='navbar-brand'>Code Generation</a> 
+      <a href="/" class='navbar-brand'>Code Generation</a> 
       <button class='navbar-toggle' type='button' data-toggle='collapse' data-target='#navbar-main'>
         <span class='icon-bar'></span>
         <span class='icon-bar'></span>
